fix align section Team

--- a/src/styles/layouts/page-layout.css
+++ b/src/styles/layouts/page-layout.css
@@ -2,6 +2,12 @@
   display: none;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+}
+
 @media screen and (min-width: 768px){
   .tablet-d-none {
     display: none;
